[project]
name = "rgb-logseq"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Brian Wisti", email = "brianwisti@pobox.com"},
]
dependencies = [
    "pyright>=1.1.363",
    "pytest>=8.2.0",
    "Faker>=25.2.0",
    "ruff>=0.4.4",
    "pydantic>=2.7.1",
    "pyfakefs>=5.5.0",
    "mypy>=1.10.0",
    "kuzu>=0.4.2",
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
    "pyarrow>=16.1.0",
    "pandas>=2.2.2",
    "pandas-stubs>=2.2.2.240603",
    "pytest-cov>=5.0.0",
    "python-slugify>=8.0.4",
    "slugify>=0.0.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.mypy]
python_version = "3.12"
files = [
  "src/",
  "tests/conftest.py",
]
disallow_any_generics = true
disallow_subclassing_any = false
disallow_untyped_calls = true
extra_checks = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "pre-commit>=3.7.1",
]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff.lint]
# C901: McCabe complexity
select = ["E4", "E7", "E9", "F", "C901"]
