[project]
name = "rgb-logseq"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Brian Wisti", email = "brianwisti@pobox.com"},
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.mypy]
python_version = "3.12"
files = [
  "src/",
  "tests/conftest.py",
]
disallow_any_generics = true
disallow_subclassing_any = false
disallow_untyped_calls = true
extra_checks = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "pre-commit>=3.7.1",
]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff.lint]
# C901: McCabe complexity
select = ["E4", "E7", "E9", "F", "C901"]
